--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="timer">
-      <span id="hours"></span>:<span id="minutes"></span>:<span id="seconds"></span>:<span id="milliseconds"></span>
+      <span id="hours"></span>:<span id="minutes"></span>:<span id="seconds"></span><div id="milliseconds-container" title="click to hide/show milliseconds">:<span id="milliseconds"></span></div>
     </div>
 
     <button id="pausebtn">Pause</button>
